{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 39,
  "lineage": "2899cd28-571c-ee9f-ca34-d988aaae06fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "crew-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438937698009:internet-gateway/igw-08f27d23658a62a18",
            "id": "igw-08f27d23658a62a18",
            "owner_id": "438937698009",
            "tags": {
              "Name": "crew-IGW"
            },
            "tags_all": {
              "Name": "crew-IGW"
            },
            "vpc_id": "vpc-02c0b7efb60910c7c"
          },
          "dependencies": [
            "aws_vpc.crew-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "crew-IGW-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d3e52bd0936a2e54",
            "tags": {
              "Name": "crew-IGW-private"
            },
            "tags_all": {
              "Name": "crew-IGW-private"
            },
            "vpc_id": "vpc-02c0b7efb60910c7c"
          },
          "dependencies": [
            "aws_vpc.crew-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "crew-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438937698009:route-table/rtb-02857e16a3580657c",
            "id": "rtb-02857e16a3580657c",
            "owner_id": "438937698009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f27d23658a62a18",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "crew-route-table"
            },
            "tags_all": {
              "Name": "crew-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c0b7efb60910c7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.crew-IGW",
            "aws_vpc.crew-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "crew-route-table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d7161f7fc71c864",
            "route_table_id": "rtb-02857e16a3580657c",
            "subnet_id": "subnet-0a7835422a4daa8b1"
          },
          "dependencies": [
            "aws_internet_gateway.crew-IGW",
            "aws_route_table.crew-route-table",
            "aws_subnet.crew-subnet-pub",
            "aws_vpc.crew-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "crew-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438937698009:subnet/subnet-0af0d6ff2970bd016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.162.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af0d6ff2970bd016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438937698009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "crew-subnet-private"
            },
            "tags_all": {
              "Name": "crew-subnet-private"
            },
            "vpc_id": "vpc-02c0b7efb60910c7c"
          },
          "dependencies": [
            "aws_vpc.crew-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "crew-subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438937698009:subnet/subnet-0a7835422a4daa8b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.162.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7835422a4daa8b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438937698009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "crew-subnet-pub"
            },
            "tags_all": {
              "Name": "crew-subnet-pub"
            },
            "vpc_id": "vpc-02c0b7efb60910c7c"
          },
          "dependencies": [
            "aws_vpc.crew-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "crew-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438937698009:vpc/vpc-02c0b7efb60910c7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.162.0.0/16",
            "default_network_acl_id": "acl-05bd95ed56fcbaf57",
            "default_route_table_id": "rtb-0c12eb89e197d8d4f",
            "default_security_group_id": "sg-09df2d58eb6514ca7",
            "dhcp_options_id": "dopt-0e6aaff1666bfd829",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c0b7efb60910c7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c12eb89e197d8d4f",
            "owner_id": "438937698009",
            "tags": {
              "Name": "crew-vpc"
            },
            "tags_all": {
              "Name": "crew-vpc"
            }
          }
        }
      ]
    }
  ]
}